{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "43c512a1-7ba8-44c1-8a5a-487f2a0ed70f",
            "actions": [
                {
                    "name": "Select",
                    "type": "PassThrough",
                    "id": "397e1a66-1271-427d-8469-43ce9041b772",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Throttle",
                    "type": "Button",
                    "id": "91812cbb-554e-4eb2-9cc0-46e782b74eb1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Steer",
                    "type": "Value",
                    "id": "72f3ab62-9f0f-4596-aedc-cac6ebe4a304",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "702a956e-0425-43c6-ae88-6c7776c7bb23",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Brake",
                    "type": "Button",
                    "id": "2d3f37ae-252c-4d8d-a8ba-6632fd3cb936",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Reverse",
                    "type": "Button",
                    "id": "9d835bbe-dcd8-4aa6-925c-bf32bca30c98",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Reset",
                    "type": "Button",
                    "id": "6acec4ce-2a91-426c-b8b8-84c3e185c885",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "CameraMovement",
                    "type": "Value",
                    "id": "91517588-abd5-4aba-9a24-ff3b0b7062bf",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d7b8d3d0-d461-43c8-a5dd-0ac622545e11",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d16205fd-37f1-4a95-8e2b-bd992f83e5c4",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "Scheme1",
                    "action": "Throttle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5e99ea8a-85cc-40e1-90ca-79d09b56bb63",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Scheme1",
                    "action": "Steer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "16365ea7-a565-488b-bca1-e38c4e07b177",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1029c764-5a98-4664-aaf0-be97a4248b16",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "Scheme1",
                    "action": "Brake",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "580b5ac2-c152-4700-ad1f-7f711c28c8e3",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Scheme1",
                    "action": "Reverse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "546774b8-fa02-4e95-9a71-8c5f888baf4d",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "Scheme1",
                    "action": "Reset",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "51cd5780-b767-4806-85d0-90e9b5627f62",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Scheme1",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Scheme1",
            "bindingGroup": "Scheme1",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        }
    ]
}